[gd_scene load_steps=10 format=3 uid="uid://0u70bm8qumdr"]

[ext_resource type="PackedScene" uid="uid://bubq3rsb3hm6e" path="res://src/match_simulator/match_simulator.tscn" id="1"]
[ext_resource type="Theme" uid="uid://pt1hrfiuwfpg" path="res://theme_base/theme.tres" id="2"]
[ext_resource type="Script" path="res://src/screens/match/match.gd" id="3"]
[ext_resource type="PackedScene" uid="uid://bc6kfu3avld0" path="res://src/ui_components/match/statistics/match_stats.tscn" id="4"]
[ext_resource type="Script" path="res://src/ui_components/base/defaults/default_button.gd" id="4_mqt4y"]
[ext_resource type="PackedScene" uid="uid://i4nnwgwck615" path="res://src/ui_components/visual_formation/visual_formation.tscn" id="5"]
[ext_resource type="LabelSettings" uid="uid://cc2vi4onhgmnw" path="res://theme_base/label/label_settings_bold.tres" id="5_8e8d2"]
[ext_resource type="PackedScene" uid="uid://5agy8ull675s" path="res://src/ui_components/match/events/match_events.tscn" id="6"]
[ext_resource type="PackedScene" uid="uid://bj7f2r54xkpt1" path="res://src/ui_components/visual_formation/players_bar/players_bar.tscn" id="7_kly0w"]

[node name="Match" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2")
script = ExtResource("3")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MatchSimulator" parent="." instance=ExtResource("1")]
visible = false
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 1
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Main" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="Content" type="BoxContainer" parent="Main"]
layout_mode = 2
theme_override_constants/separation = 40
vertical = true

[node name="Buttons" type="BoxContainer" parent="Main/Content"]
layout_mode = 2
alignment = 1

[node name="Left" type="HBoxContainer" parent="Main/Content/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="FieldButton" type="Button" parent="Main/Content/Buttons/Left"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "FIELD"
script = ExtResource("4_mqt4y")

[node name="CommentaryButton" type="Button" parent="Main/Content/Buttons/Left"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "COMMENTARY"
script = ExtResource("4_mqt4y")

[node name="StatsButton" type="Button" parent="Main/Content/Buttons/Left"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "STATS"
script = ExtResource("4_mqt4y")

[node name="EventsButton" type="Button" parent="Main/Content/Buttons/Left"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "EVENTS"
script = ExtResource("4_mqt4y")

[node name="FormationButton" type="Button" parent="Main/Content/Buttons/Left"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "FORMATION"
script = ExtResource("4_mqt4y")

[node name="Center" type="HBoxContainer" parent="Main/Content/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5
alignment = 1

[node name="Speed" type="HBoxContainer" parent="Main/Content/Buttons/Center"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="SlowerButton" type="Button" parent="Main/Content/Buttons/Center/Speed"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "-1"
script = ExtResource("4_mqt4y")

[node name="SpeedFactor" type="Label" parent="Main/Content/Buttons/Center/Speed"]
unique_name_in_owner = true
layout_mode = 2
text = "X2"

[node name="FasterButton" type="Button" parent="Main/Content/Buttons/Center/Speed"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "+1"
script = ExtResource("4_mqt4y")

[node name="PauseButton" type="Button" parent="Main/Content/Buttons/Center"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "PAUSE"
script = ExtResource("4_mqt4y")

[node name="Right" type="HBoxContainer" parent="Main/Content/Buttons"]
layout_mode = 2
theme_override_constants/separation = 5
alignment = 2

[node name="SimulateButton" type="Button" parent="Main/Content/Buttons/Right"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "SIMULATE"
script = ExtResource("4_mqt4y")

[node name="DashboardButton" type="Button" parent="Main/Content/Buttons/Right"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "DASHBOARD"
script = ExtResource("4_mqt4y")

[node name="CentralContainer" type="VBoxContainer" parent="Main/Content"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="TopBar" type="HBoxContainer" parent="Main/Content/CentralContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="TimeBar" type="ProgressBar" parent="Main/Content/CentralContainer/TopBar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 3
max_value = 2400.0
step = 1.0
show_percentage = false

[node name="Info" type="HBoxContainer" parent="Main/Content/CentralContainer/TopBar/TimeBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15
alignment = 1

[node name="Time" type="Label" parent="Main/Content/CentralContainer/TopBar/TimeBar/Info"]
unique_name_in_owner = true
layout_mode = 2
text = "00:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HomeColor" type="ColorRect" parent="Main/Content/CentralContainer/TopBar/TimeBar/Info"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2

[node name="HomeFouls" type="Label" parent="Main/Content/CentralContainer/TopBar/TimeBar/Info"]
unique_name_in_owner = true
layout_mode = 2
text = "(0)"

[node name="HomeNameLabel" type="Label" parent="Main/Content/CentralContainer/TopBar/TimeBar/Info"]
unique_name_in_owner = true
layout_mode = 2
text = "Robledo"
label_settings = ExtResource("5_8e8d2")

[node name="Result" type="Label" parent="Main/Content/CentralContainer/TopBar/TimeBar/Info"]
unique_name_in_owner = true
layout_mode = 2
text = "0:0"
label_settings = ExtResource("5_8e8d2")

[node name="AwayNameLabel" type="Label" parent="Main/Content/CentralContainer/TopBar/TimeBar/Info"]
unique_name_in_owner = true
layout_mode = 2
text = "Cisneros"
label_settings = ExtResource("5_8e8d2")

[node name="AwayFouls" type="Label" parent="Main/Content/CentralContainer/TopBar/TimeBar/Info"]
unique_name_in_owner = true
layout_mode = 2
text = "(0)"

[node name="AwayColor" type="ColorRect" parent="Main/Content/CentralContainer/TopBar/TimeBar/Info"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2

[node name="MainBar" type="MarginContainer" parent="Main/Content/CentralContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Log" type="VBoxContainer" parent="Main/Content/CentralContainer/MainBar"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Stats" parent="Main/Content/CentralContainer/MainBar" instance=ExtResource("4")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Events" parent="Main/Content/CentralContainer/MainBar" instance=ExtResource("6")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Formation" parent="Main/Content/CentralContainer/MainBar" instance=ExtResource("5")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="BottomBar" type="VBoxContainer" parent="Main/Content/CentralContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="PossessBar" type="ProgressBar" parent="Main/Content/CentralContainer/BottomBar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
min_value = 1.0
step = 1.0
value = 50.0
show_percentage = false

[node name="Labels" type="HBoxContainer" parent="Main/Content/CentralContainer/BottomBar/PossessBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="HomePossessionLabel" type="Label" parent="Main/Content/CentralContainer/BottomBar/PossessBar/Labels"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "50%"
horizontal_alignment = 1

[node name="Posession" type="Label" parent="Main/Content/CentralContainer/BottomBar/PossessBar/Labels"]
layout_mode = 2
size_flags_horizontal = 3
text = "POSSESSION"
horizontal_alignment = 1

[node name="AwayPossessionLabel" type="Label" parent="Main/Content/CentralContainer/BottomBar/PossessBar/Labels"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "50%"
horizontal_alignment = 1

[node name="PlayersBar" parent="Main/Content/CentralContainer/BottomBar" instance=ExtResource("7_kly0w")]
unique_name_in_owner = true
layout_mode = 2

[connection signal="action_message" from="MatchSimulator" to="." method="_on_match_simulator_action_message"]
[connection signal="pressed" from="Main/Content/Buttons/Left/FieldButton" to="." method="_on_field_button_pressed"]
[connection signal="pressed" from="Main/Content/Buttons/Left/CommentaryButton" to="." method="_on_commentary_button_pressed"]
[connection signal="pressed" from="Main/Content/Buttons/Left/StatsButton" to="." method="_on_stats_button_pressed"]
[connection signal="pressed" from="Main/Content/Buttons/Left/EventsButton" to="." method="_on_events_button_pressed"]
[connection signal="pressed" from="Main/Content/Buttons/Left/FormationButton" to="." method="_on_formation_button_pressed"]
[connection signal="pressed" from="Main/Content/Buttons/Center/Speed/SlowerButton" to="." method="_on_slower_button_pressed"]
[connection signal="pressed" from="Main/Content/Buttons/Center/Speed/FasterButton" to="." method="_on_faster_button_pressed"]
[connection signal="pressed" from="Main/Content/Buttons/Center/PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="Main/Content/Buttons/Right/SimulateButton" to="." method="_on_simulate_button_pressed"]
[connection signal="pressed" from="Main/Content/Buttons/Right/DashboardButton" to="." method="_on_dashboard_button_pressed"]
[connection signal="change_request" from="Main/Content/CentralContainer/MainBar/Formation" to="." method="_on_formation_change_request"]
[connection signal="change_request" from="Main/Content/CentralContainer/BottomBar/PlayersBar" to="." method="_on_players_bar_change_request"]
